--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "price": "$0.79",
-  "tvl": "$153,590",
-  "apy": "7,253.8%",
-  "treasury": "$93,691",
-  "lastupdate": "18/02/2022 10:29:06"
+  "tvl": "",
+  "apy": "",
+  "treasury": "$93,772",
+  "lastupdate": "18/02/2022 10:51:31"
 }
