--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "price": "$0.79",
-  "tvl": "",
-  "apy": "",
-  "treasury": "$93,772",
-  "lastupdate": "18/02/2022 10:51:31"
+  "tvl": "$153,251",
+  "apy": "7,253.8%",
+  "treasury": "$93,404",
+  "lastupdate": "18/02/2022 11:13:46"
 }
